python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/sdif.h

/* forward declaration of big SDIF file struct type */
typedef struct SdifFileS SdifFileT;
/* SdifHash.h */
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef struct SdifHashTableS SdifHashTableT;
typedef uint32_t       SdifUInt4;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
typedef double         SdifFloat8;
/* DataTypeEnum

   On Matt Wright's visit at IRCAM June 1999, we defined a new
   encoding for the MatrixDataType field with the feature that the low
   order byte encodes the number of bytes taken by each matrix
   element.  

   Low order byte encodes the number of bytes 
   High order bytes come from this (extensible) enum:

        0 : Float
        1 : Signed integer
        2 : Unsigned integer
        3 : Text (UTF-8 when 1 byte)
        4 : arbitrary/void
*/
typedef enum SdifDataTypeE
{
  eText     = 0x0301,
  eChar     = 0x0301,
  eFloat4   = 0x0004,
  eFloat8   = 0x0008,
  eInt1     = 0x0101,
  eInt2     = 0x0102,
  eInt4     = 0x0104,
  eInt8     = 0x0108,
  eUInt1    = 0x0201,
  eUInt2    = 0x0202,
  eUInt4    = 0x0204,
  eUInt8    = 0x0208,
            
  eFloat4a  = 0x0001,   /* =  1 */    /* Backwards compatibility with old */
  eFloat4b  = 0x0020,   /* = 32 */    /* IRCAM versions < 3 of SDIF */
  eFloat8a  = 0x0002,   /* =  2 */    /* IN TEXT MODE ONLY! */
  eFloat8b  = 0x0040    /* = 64 */
} SdifDataTypeET;
typedef struct SdifNameValuesLS SdifNameValuesLT;
struct SdifNameValuesLS
{
    SdifListT*              NVTList;  /* list of SdifNameValueTableT */
    SdifNameValueTableT*    CurrNVT;
    SdifUInt4               HashSize;
};
/*DOC:
  Stream ID Table, holds SdifStreamIDT stream ID table entries */
typedef struct SdifStreamIDTableS SdifStreamIDTableT;
struct SdifStreamIDTableS
{
    SdifHashTableT* SIDHT;
    SdifUInt4       StreamID;
    SdifFloat8      Time;       /* always _SdifNoTime */
} ;
/* SdifMatrixType.h */
typedef struct SdifMatrixTypeS SdifMatrixTypeT;
struct SdifMatrixTypeS
{
  SdifSignature     Signature;

  SdifMatrixTypeT*  MatrixTypePre;

  SdifListT*        ColumnUserList; /* List of columns added by user: 
                                       SdifMatrixTypeInsertTailColumn(MatrixTypeT *)
                                    */

  SdifUInt4       NbColumnDef; /* Number of columns created by user:
                                  SdifMatrixTypeInsertTailColumn(MatrixTypeT *)
                               */
  SdifModifModeET ModifMode;
};
/* SdifMatrix.h */
typedef struct SdifMatrixHeaderS SdifMatrixHeaderT;
typedef struct SdifOneRowS SdifOneRowT;
struct SdifOneRowS
{
  SdifDataTypeET DataType;
  SdifUInt4      NbData;
  DataTypeUT     Data;
  SdifUInt4      NbGranuleAlloc;
} ;
typedef struct SdifMatrixDataS SdifMatrixDataT;
struct SdifMatrixDataS
{
  SdifMatrixHeaderT *Header;
  int               ForeignHeader;  /* Header was not allocated by me */
  SdifUInt4         Size;       /* byte size of matrix on file */
  DataTypeUT        Data;       /* any type pointer to data */
  SdifUInt4         AllocSize;  /* allocated size of data in bytes */
};
/* SdifFrame.h */
typedef struct SdifFrameHeaderS SdifFrameHeaderT;
struct SdifFrameHeaderS
{
  SdifSignature Signature;
  SdifUInt4  Size;
  SdifUInt4  NbMatrix;
  SdifUInt4  NumID;
  SdifFloat8 Time;
} ;
/* TODO: array of select elements
     struct { 
        SdifListP list; 
        SdifSelectElementT minmax; 
        SdifSelectIntMaskP mask;
     } elem [eSelNum];
     indexed by
     enum   { eTime, eStream, eFrame, eMatrix, eColumn, eRow, eSelNum }
   to use in all API functions instead of SdifListP.
*/



/* SdifErrMess.h */
typedef enum SdifErrorTagE
{
    eFalse   = 0,
    eUnknown = 0,
    eTrue    = 1,
    eNoError = 1,
    eTypeDataNotSupported,
    eNameLength,
    eEof,       /* 4 */
    eReDefined,
    eUnDefined,
    eSyntax,
    eBadTypesFile,
    eBadType,
    eBadHeader,
    eRecursiveDetect,
    eUnInterpreted,
    eOnlyOneChunkOf,
    eUserDefInFileYet,
    eBadMode,
    eBadStdFile,
    eReadWriteOnSameFile,
    eBadFormatVersion,
    eMtrxUsedYet,
    eMtrxNotInFrame,
/* from here on global errors that don't always have an SdifFileT attached */
    eGlobalError,
    eFreeNull = eGlobalError,
    eAllocFail,
    eArrayPosition,
    eFileNotFound,
    eInvalidPreType,
    eAffectationOrder,
    eNoModifErr,
    eNotInDataTypeUnion,
    eNotFound,
    eExistYet,
    eWordCut,
    eTokenLength
} SdifErrorTagET;
typedef struct SdifErrorS SdifErrorT;
struct SdifErrorS
{
        SdifErrorTagET          Tag;
        SdifErrorLevelET        Level;
        char*                   UserMess;
};
/* SdifFileStruct.h */

/*
// DATA GROUP:  SDIF File Structure
*/

/*DOC:
  File mode argument for SdifFOpen. */
typedef enum SdifFileModeE
{
  eUnknownFileMode,     /* 0 */
  eWriteFile,
  eReadFile,
  eReadWriteFile,
  ePredefinedTypes,     /* 4 */

  eModeMask = 7,        /* get rid of flags */

  /* from here on we have flags that can be or'ed with the previous modes */
  eParseSelection = 8
} SdifFileModeET ;
/*DOC:
  THE SDIF File Structure! */
struct SdifFileS
{
  char               *Name;             /* Name of the file, can be "stdin, stdout, stderr */
  SdifFileModeET     Mode;              /* eWriteFile or eReadFile or ePredefinedTypes */
  int                isSeekable;        /* file is not pipe i/o */

  SdifUInt4          FormatVersion;     /* version of the SDIF format itself */
  SdifUInt4          TypesVersion;      /* version of the description type collection */

  SdifNameValuesLT   *NameValues;       /* DataBase of Names Values */
  SdifHashTableT     *MatrixTypesTable; /* DataBase of Matrix Types */
  SdifHashTableT     *FrameTypesTable;  /* DataBase of Frame Types */
/*  SdifHashTableT     *StreamIDsTable;    DataBase of Stream IDs */
  SdifStreamIDTableT *StreamIDsTable;   /* DataBase of Stream IDs */
  SdifTimePositionLT *TimePositions;    /* List of (Time, Position in file) */
  SdifSelectionT     *Selection;        /* default selection parsed from Name */

  FILE *Stream;                         /* Stream to read or to write */

  SdifSignature      CurrSignature;
  SdifFrameHeaderT   *CurrFramH;        /* Current Frame Header can be NULL */
  SdifMatrixHeaderT  *CurrMtrxH;        /* Current Matrix Header can be NULL */

  SdifFrameTypeT     *CurrFramT;
  SdifMatrixTypeT    *CurrMtrxT;
  SdifFloat8         PrevTime;
  SdifSignatureTabT  *MtrxUsed;

  SdifOneRowT        *CurrOneRow;
  /* Current OneRow allocated memory in function
   * of _SdifGranule, use SdifReInitOneRow(SdifOneRowT *OneRow, SdifDataTypeET DataType, SdifUInt4 NbData)
   * to assure NbData (=NbColumns) objects memory allocated
   */

  /* data pointer used by SdifFReadMatrixData, never uses the Header field */
  SdifMatrixDataT    *CurrMtrxData;

  size_t  FileSize;
  size_t  ChunkSize;

  SdiffPosT  CurrFramPos;
  SdiffPosT  StartChunkPos;
  SdiffPosT  Pos;
  
  SdifUInt2  TypeDefPass;
  SdifUInt2  StreamIDPass;

  char *TextStreamName;                 /* Name of the text file corresponding to the sdif file */
  FILE *TextStream;                     /* Stream text */

  SdifUInt4     ErrorCount [eNumLevels];/* Error count per level of severity */
  SdifErrorLT  *Errors;                 /* List of errors or warnings */

  int           NbUserData;             /* todo: hash table */
  void          *UserData [MaxUserData];
};      /* end struct SdifFileS */
SDIF_API size_t SdifFReadAllASCIIChunks   (SdifFileT *SdifF);
/*
// FUNCTION GROUP:      Opening and Closing of Files
*/

/*DOC:
 */
SDIF_API SdifFileT* SdifFOpen                   (const char *Name, SdifFileModeET Mode);
/*DOC: 
  Permet de donner des valeurs à chaque champ de l'entête de matice
  temporaire de SdifF.<p>

  Exemple:
  <code>SdifSetCurrMatrixHeader(SdifF, '1FOF', eFloat4, NbFofs, 7);</code> */
SDIF_API SdifMatrixHeaderT* SdifFSetCurrMatrixHeader (SdifFileT *SdifF, 
                                                      SdifSignature Signature,
                                                      SdifDataTypeET DataType, 
                                                      SdifUInt4 NbRow, 
                                                      SdifUInt4 NbCol);
/*DOC: 
  Recopie la mémoire pointée par Values en fonction de l'entête de
  matrice courante.<p> 

  Exemple:<br>
<pre>
  #define NbCols = 10;<br>

  float t[NbCols] = { 1., 2., 3., 4., 5., 6., 7., 8., 9., 0.};<br>

  SdifFSetCurrMatrixHeader(SdifF, 'mtrx', eFloat4, 1, NbCols);<br>
  SdifFSetCurrOneRow      (SdifF, (void*) t);<br>
</pre>

  On connait la taille de la mémoire à recopier par le type de donnée
  (ici: eFloat4) et le nombre de colonnes (ici: NbCols). Il faut que
  le type de donnée de la matrice courante corresponde avec la taille
  d'un élément de t. Si t est composé de float sur 4 bytes, alors on
  doit avoir eFloat4. Si t est composé de double float sur 8 bytes,
  alors c'est eFloat8.<br>

  En général, les données d'un programme ne se présente pas sous cette
  forme et il faut réaliser une transposition lors des transfert de
  Sdif à un programme. Le programme Diphone Ircam a un bon exemple de
  lecture avec transposition automatique, généralisée pour tout type
  de matrice. */
SDIF_API SdifOneRowT*  SdifFSetCurrOneRow       (SdifFileT *SdifF, void *Values);
/*DOC: 
  Permet de donner la valeur Value dans la ligbe de matrice temporaire
  de SdifF à la colonne numCol (0<numCol<=SdifF->CurrMtrxH->NbCol).  */
SDIF_API SdifOneRowT* SdifFSetCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol, SdifFloat8 Value);
/*DOC: 
  Recupère la valeur stockée à la colonne numCol de la ligne
  temporaire.  C'est un SdifFloat8 donc un double!!  */ 
SDIF_API SdifFloat8 SdifFCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol);
/*DOC: 
  Idem que la fonction précédente mais en utilisant le type de la
  matrice et le nom de la colonne.  */
SDIF_API SdifFloat8    SdifFCurrOneRowColName   (SdifFileT *SdifF, 
                                        SdifMatrixTypeT *MatrixType, 
                                        const char *NameCD);
/*DOC: 
  Renvoie la signature temporaire de Chunk ou de Frame.  */
SDIF_API SdifSignature SdifFCurrSignature       (SdifFileT *SdifF);
/*DOC: 
  Met à 0 tous les bits de la signature temporaire.  */
SDIF_API SdifSignature SdifFCleanCurrSignature  (SdifFileT *SdifF);
/*DOC: 
  Renvoie la signature temporaire du dernier Frame lu ou du prochain à
  écrire.  */
SDIF_API SdifSignature SdifFCurrFrameSignature  (SdifFileT *SdifF);
/*DOC: 
  Renvoie la signature temporaire de la dernier matrice lue ou de la
  prochaine à écrire.  */
SDIF_API SdifSignature SdifFCurrMatrixSignature (SdifFileT *SdifF);
/*DOC: 
  Renvoie SdifF->CurrMtrx->NbCol, nombre de colonnes de la matrice en
  cours de traitement.  */
SDIF_API SdifUInt4     SdifFCurrNbCol           (SdifFileT *SdifF);
/*DOC: 
  Renvoie SdifF->CurrMtrx->NbRow, nombre de lignes de la matrice en
  cours de traitement.  */
SDIF_API SdifUInt4     SdifFCurrNbRow           (SdifFileT *SdifF);
/*DOC: 
  Returns the data type of the current matrix. */
SDIF_API SdifDataTypeET SdifFCurrDataType (SdifFileT *SdifF);
/*DOC: 
  Renvoie SdifF->CurrFramH->NbMatrix, mombre de matrices du frame
  courant.  */
SDIF_API SdifUInt4     SdifFCurrNbMatrix        (SdifFileT *SdifF);
/*DOC: 
  Renvoie SdifF->CurrFramH->NumID, index de l'objet du frame courant.  */
SDIF_API SdifUInt4     SdifFCurrID              (SdifFileT *SdifF);
/*DOC: 
  Renvoie SdifF->CurrFramH->Time.  */
SDIF_API SdifFloat8    SdifFCurrTime            (SdifFileT *SdifF);
/*
// FUNCTION GROUP:      File Data Access Functions
*/

/*DOC: 
  Renvoie la ligne temporaire de SdifF.  */
SDIF_API SdifOneRowT*  SdifFCurrOneRow          (SdifFileT *SdifF);
/*DOC:
  Returns a pointer to the data of the current matrix row.  
  According to the matrix data type, it can be a pointer to float or double. */
SDIF_API void*        SdifFCurrOneRowData          (SdifFileT *SdifF);
/*DOC: 
  Return pointer to current matrix data structure, if read before with
  SdifFReadMatrixData. */
SDIF_API SdifMatrixDataT *SdifFCurrMatrixData (SdifFileT *file);
/*DOC: 
  Return pointer to current raw matrix data, if read before with
  SdifFReadMatrixData.  Data is specified by current matrix header */
SDIF_API void*        SdifFCurrMatrixDataPointer (SdifFileT *file);
/*DOC:
  Return list of NVTs for querying. 
  [] precondition NVTs have been read with SdifFReadAllASCIIChunks. */
SDIF_API SdifNameValuesLT *SdifFNameValueList (SdifFileT *file);
/*DOC:
  Return number of NVTs present.
  [] precondition NVTs have been read with SdifFReadAllASCIIChunks. */
SDIF_API int SdifFNameValueNum (SdifFileT *file);
/*DOC:
  Return the file's stream ID table, created automatically by SdifFOpen. */
SDIF_API SdifStreamIDTableT *SdifFStreamIDTable (SdifFileT *file);
/*DOC:
  Add user data, return index added */
SDIF_API int SdifFAddUserData (SdifFileT *file, void *data);
/*DOC:
  Get user data by index */
SDIF_API void *SdifFGetUserData (SdifFileT *file, int index);
SDIF_API SdifFileT*    SdifFReInitMtrxUsed (SdifFileT *SdifF);
SDIF_API SdifFileT*    SdifFPutInMtrxUsed  (SdifFileT *SdifF, SdifSignature Sign);
SDIF_API SdifSignature SdifFIsInMtrxUsed   (SdifFileT *SdifF, SdifSignature Sign);
/*
// FUNCTION GROUP:      Error flag for file
*/

/*DOC: 
  Return pointer to last error struct or NULL if no error present
  for this file. */
SDIF_API SdifErrorT*     SdifFLastError    (SdifFileT *SdifF);
/*DOC: 
  Return tag of last error or eNoError if no error present for this file. */
SDIF_API SdifErrorTagET  SdifFLastErrorTag (SdifFileT *SdifF);
#define _SdifFrameHeaderSize 16  /* (ID=4)+(size=4)+(time=8) */
SDIF_API SdifFrameHeaderT* SdifCreateFrameHeader(SdifSignature Signature,
                                               SdifUInt4 Size,
                                               SdifUInt4 NbMatrix,
                                               SdifUInt4 NumID,
                                               SdifFloat8 Time);
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));
/*DOC: 
  Reads matrix data and padding.  The data is stored in CurrMtrxData,
  for which the library will allocate enough space for the data of one
  matrix, accessible by SdifFCurrMatrixData().  
  
  @return       number of bytes read or 0 if error
                N.B. first of all that an error is signalled to the error callback
                set with SdifSetErrorFunc, and the library tries to exit via the 
                function set with SdifSetExitFunc.  So, if you have to check the
                return value, note that for matrices with 0 rows or 0 columns,
                a return value of 0 is correct.  
                You should thus check for this with:

  if (nread == 0  &&  (SdifFCurrNbRow(file) != 0  ||  SdifFCurrNbCol(file) != 0))
      --> read problem

  [Precondition:] 
  Matrix header must have been read with SdifFReadMatrixHeader.  
*/
SDIF_API size_t SdifFReadMatrixData   (SdifFileT *file);