python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd


    # 
    # 
    # /*DOC: 
    #   Recopie la memoire pointee par Values en fonction de l'entete de
    #   matrice courante.<p> 
    # 
    #   Exemple:<br>
    # <pre>
    #   #define NbCols = 10;<br>
    # 
    #   float t[NbCols] = { 1., 2., 3., 4., 5., 6., 7., 8., 9., 0.};<br>
    # 
    #   SdifFSetCurrMatrixHeader(SdifF, 'mtrx', eFloat4, 1, NbCols);<br>
    #   SdifFSetCurrOneRow      (SdifF, (void*) t);<br>
    # </pre>
    # 
    #   On connait la taille de la memoire a recopier par le type de donnee
    #   (ici: eFloat4) et le nombre de colonnes (ici: NbCols). Il faut que
    #   le type de donnee de la matrice courante corresponde avec la taille
    #   d'un element de t. Si t est compose de float sur 4 bytes, alors on
    #   doit avoir eFloat4. Si t est compose de double float sur 8 bytes,
    #   alors c'est eFloat8.<br>
    # 
    #   En general, les donnees d'un programme ne se presente pas sous cette
    #   forme et il faut realiser une transposition lors des transfert de
    #   Sdif a un programme. Le programme Diphone Ircam a un bon exemple de
    #   lecture avec transposition automatique, generalisee pour tout type
    #   de matrice. */
    # SdifOneRowT*  SdifFSetCurrOneRow       (SdifFileT *SdifF, void *Values);
    SdifOneRowT* SdifFSetCurrOneRow (SdifFileT *SdifF, void *Values)
    # 
    # 
    # /*DOC: 
    #   Permet de donner la valeur Value dans la ligbe de matrice temporaire
    #   de SdifF a la colonne numCol (0<numCol<=SdifF->CurrMtrxH->NbCol).  */
    # SdifOneRowT* SdifFSetCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol, SdifFloat8 Value);
    SdifOneRowT* SdifFSetCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol, SdifFloat8 Value)
    # 
    # 
    # /*DOC: 
    #   Recupere la valeur stockee a la colonne numCol de la ligne
    #   temporaire.  C'est un SdifFloat8 donc un double!!  */ 
    # SdifFloat8 SdifFCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol);
    SdifFloat8 SdifFCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol)
    # 
    # 
    # /*DOC: 
    #   Idem que la fonction precedente mais en utilisant le type de la
    #   matrice et le nom de la colonne.  */
    # SdifFloat8    SdifFCurrOneRowColName   (SdifFileT *SdifF, 
    #                                         SdifMatrixTypeT *MatrixType, 
    #                                         const_char_ptr NameCD);
    SdifFloat8 SdifFCurrOneRowColName (SdifFileT *SdifF, 
                                         SdifMatrixTypeT *MatrixType, 
                                         const_char_ptr NameCD)

    # 
    # 
    # /*DOC: 
    #   Renvoie la signature temporaire de Chunk ou de Frame.  */
    # SdifSignature SdifFCurrSignature       (SdifFileT *SdifF);
    SdifSignature SdifFCurrSignature (SdifFileT *SdifF)
    # 
    # 
    # /*DOC: 
    #   Met a 0 tous les bits de la signature temporaire.  */
    SdifSignature SdifFCleanCurrSignature  (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie la signature temporaire du dernier Frame lu ou du prochain a
    #   ecrire.  */
    SdifSignature SdifFCurrFrameSignature  (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie la signature temporaire de la dernier matrice lue ou de la
    #   prochaine a ecrire.  */
    SdifSignature SdifFCurrMatrixSignature (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie SdifF->CurrMtrx->NbCol, nombre de colonnes de la matrice en
    #   cours de traitement.  */
    SdifUInt4 SdifFCurrNbCol (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie SdifF->CurrMtrx->NbRow, nombre de lignes de la matrice en
    #   cours de traitement.  */
    SdifUInt4 SdifFCurrNbRow (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Returns the data type of the current matrix. */
    SdifDataTypeET SdifFCurrDataType (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie SdifF->CurrFramH->NbMatrix, mombre de matrices du frame
    #   courant.  */
    SdifUInt4 SdifFCurrNbMatrix (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie SdifF->CurrFramH->NumID, index de l'objet du frame courant.  */
    SdifUInt4 SdifFCurrID (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Renvoie SdifF->CurrFramH->Time.  */
    SdifFloat8 SdifFCurrTime (SdifFileT *SdifF)
    # 
    # 
    # 
    # 
    # /*
    # // FUNCTION GROUP:      File Data Access Functions
    # */
    # 
    # /*DOC: 
    #   Renvoie la ligne temporaire de SdifF.  */
    SdifOneRowT* SdifFCurrOneRow (SdifFileT *SdifF)
    # 
    # /*DOC:
    #   Returns a pointer to the data of the current matrix row.  
    #   According to the matrix data type, it can be a pointer to float or double. */
    void* SdifFCurrOneRowData (SdifFileT *SdifF)
    # 
    # /*DOC: 
    #   Return pointer to current matrix data structure, if read before with
    #   SdifFReadMatrixData. */
    SdifMatrixDataT *SdifFCurrMatrixData (SdifFileT *file)
    # 
    # /*DOC: 
    #   Return pointer to current raw matrix data, if read before with
    #   SdifFReadMatrixData.  Data is specified by current matrix header */
    void* SdifFCurrMatrixDataPointer (SdifFileT *file)
    # 
    # 
    # /*DOC:
    #   Return list of NVTs for querying. 
    #   [] precondition NVTs have been read with SdifFReadAllASCIIChunks. */
    SdifNameValuesLT *SdifFNameValueList (SdifFileT *file)
    # 
    # /*DOC:
    #   Return number of NVTs present.
    #   [] precondition NVTs have been read with SdifFReadAllASCIIChunks. */
    int SdifFNameValueNum (SdifFileT *file)
    # 
    # /*DOC:
    #   Return the file's stream ID table, created automatically by SdifFOpen. */
    SdifStreamIDTableT *SdifFStreamIDTable (SdifFileT *file)
    # 
    # /*DOC:
    #   Add user data, return index added */
    int SdifFAddUserData (SdifFileT *file, void *data)
    # 
    # /*DOC:
    #   Get user data by index */
    void *SdifFGetUserData (SdifFileT *file, int index)

    SdifFileT*    SdifFReInitMtrxUsed (SdifFileT *SdifF)
    SdifFileT*    SdifFPutInMtrxUsed  (SdifFileT *SdifF, SdifSignature Sign)
    SdifSignature SdifFIsInMtrxUsed   (SdifFileT *SdifF, SdifSignature Sign)
    # 
    # 
    # 
    # /*
    # // FUNCTION GROUP:      Error flag for file
    # */
    # 
    # /*DOC: 
    #   Return pointer to last error struct or NULL if no error present
    #   for this file. */
    SdifErrorT* SdifFLastError (SdifFileT *SdifF)
    # 
    # /*DOC: 
    # Return tag of last error or eNoError if no error present for this file. */
    SdifErrorTagET  SdifFLastErrorTag (SdifFileT *SdifF)



    #define _SdifFrameHeaderSize 16  /* (ID=4)+(size=4)+(time=8) */
    DEF _SdifFrameHeaderSize=16



    SdifFrameHeaderT* SdifCreateFrameHeader(SdifSignature Signature,
                                                SdifUInt4 Size,
                                                SdifUInt4 NbMatrix,
                                                SdifUInt4 NumID,
                                                SdifFloat8 Time)
